set image on home page to be different and not to reduce below 300x300, rewrote about page text, added quote instead of maifesto

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -36,6 +36,9 @@
 .manifesto-img {
   margin-top: 2em;
   width: 350px;
+  border-radius: 50%;
+  min-height: 300px;
+  min-width: 300px;
 }
 
 .salad {
