--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -3,7 +3,7 @@
 
         <div class="seasons-show-header">
           <h1><%= @season.name %></h1>
-          <p>This site is dedicated to making sure we get the message out: Nick just absolutely loves Beets! Can't get enough of em! Every day he just says "Beets! Beets! I need my Beets!", so we play some music and it just pisses him off to no end. But seriously, Nick loves Beets.</p>
+          <p>Sautee' Seattle is dedicated to bringing you up to date information on seasonal vegetable, fruit and more! We think that eating healthy and that information on seasonal produce should be easily available to everyone, all the time!</p>
           <h2>Whats on the Menu?</h2>
         </div>
 
