--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <section class="global-form-style">
   <h1>Create an Account!</h1>
   <aside>
-    <%= form_for @user, html: { class: 'form' } do |f| %>
+    <%= form_for @user, html: { class: 'form', multipart: true } do |f| %>
       <%= render "shared/errors" %>
 
       <div class="label">
