fixed the name of the branch

--- a/app/views/shared/_home-page.html.erb
+++ b/app/views/shared/_home-page.html.erb
@@ -11,7 +11,7 @@
         <%= image_tag "veggies.jpg", class: "manifesto-img" %>
       </aside><!-- end manifesto header -->
       <aside class="right-content">
-        <p>Here at Satuee' Seattle we strive to make it simple and easy to find out what is in season anytime & anywhere! We work hard to bring you only the most up to date information at all times. The creators of Sautee' Seattle are all foodies who absolutely love food, coffee, cake, pizza, dim sum and more! Eating seasonally grown produce helps farmers, markets, and your health! so muake sure you buy seasonally available produce whenever you have the chance.</p>
+        <p>Here at Satuee' Seattle we strive to make it simple and easy to find out what is in season anytime &amp; anywhere! We work hard to bring you only the most up to date information at all times. The creators of Sautee' Seattle are all foodies who absolutely love food, coffee, cake, pizza, dim sum and more! Eating seasonally grown produce helps farmers, markets, and your health! so muake sure you buy seasonally available produce whenever you have the chance.</p>
 
         <span> <a href="#top" class="title-back-top">back to top</a></span>
       </aside><!-- end manifesto header -->
