--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -26,4 +26,14 @@
     color: gray;
   }
 
+  .btn-show{
+    font-family: 'arapeyitalic';
+    padding-left: .5em;
+    color: var(--summer)!important;
+  }
+
+  li a.btn-show:hover{
+    color: lime!important;
+  }
+
 }
