added route for locations show, removed method from link_to, added css color stylings

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -29,7 +29,7 @@
   .btn-show{
     font-family: 'arapeyitalic';
     padding-left: .5em;
-    color: var(--summer)!important;
+    color: forestgreen!important;
   }
 
   li a.btn-show:hover{
