--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
           <li>
             <%= link_to location.title, "http://#{location.url}", target: '_blank' %>
             <% if @user.id == session[:user_id] %>
-              <%= link_to 'map', location_path(location), :method => :show, :class => "btn-show" %>
+              <%= link_to 'map', location_path(location), :class => "btn-show" %>
               <%= link_to 'remove', location_path(location), :method => :delete, :class => "btn-delete", data: {confirm: "Are you sure?"} %>
             <% end %>
           </li>
