--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,7 +29,7 @@
         <label><h3>Profile Picture</h3></label>
       </div>
       <div>
-        <%= f.file_field :image, value: 'https://s3-us-west-2.amazonaws.com/seattle-saute/default_profile.png' %>
+        <%= f.file_field :image %>
       </div>
 
       <div class="label">
