--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sautee Seattle | Eating Seasonal in Seattle WA</title>
+    <title>Saute Seattle | Eating Seasonal in Seattle WA</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <%= javascript_include_tag 'application' %>
   </head>
   <body>
-    <!-- <div id="overlay">
-      <h1>Saut&eacute; Seattle</h1>
-    </div> -->
-    <main>
-      <div class="wrapper">
+
+
+    <%= render "shared/spinner" %>
+    <main <% if request.path == "/" %> hidden="hidden" <% end %>>
+      <div class="wrapper" >
         <%= render "shared/login_bar" %>
         <%= render "shared/home-page" %>
         <%= yield %>
