--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -169,6 +169,7 @@ footer {
 }
 
 #home-page {
+  display: none;
   background-image: url('grocery-background.jpeg');
   min-height: 100%;
   background-size: cover;
