hassan is awesome and figured it out

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -4,17 +4,13 @@
       <img class="mapped-locations-google-map-img"  src="https://maps.googleapis.com/maps/api/staticmap?center=40.714%2c%20-73.998&zoom=12&size=400x400&key=<%= ENV['GOOGLE_MAPS_KEY'] %>" alt="Google Image">
     </li>
     <li>
-      <% @all_the_things.each do |item| %>
-        <%= item %>
-      <% end %>
-
-      <p> <%= @all_the_things[1][:address_components] %> </p>
-      <!-- <p> <%= @all_the_things %> </p> -->
+      <p> <%= @all_the_things[0[0][0[0]]] %> </p>
+    </li>
+    <li>
+      <p> <%= @other_things[0][0] %> </p>
     </li>
   </ul>
 </section>
-
-
 <!--
-
+[0][0][0]
 {"results"=>[{"address_components"=>[{"long_name"=>"Google Building 42", "short_name"=>"Google Bldg 42", "types"=>["premise"]}, {"long_name"=>"1600", "short_name"=>"1600", "types"=>["street_number"]}, {"long_name"=>"Amphitheatre Parkway", "short_name"=>"Amphitheatre Pkwy", "types"=>["route"]}, {"long_name"=>"Mountain View", "short_name"=>"Mountain View", "types"=>["locality", "political"]}, {"long_name"=>"Santa Clara County", "short_name"=>"Santa Clara County", "types"=>["administrative_area_level_2", "political"]}, {"long_name"=>"California", "short_name"=>"CA", "types"=>["administrative_area_level_1", "political"]}, {"long_name"=>"United States", "short_name"=>"US", "types"=>["country", "political"]}, {"long_name"=>"94043", "short_name"=>"94043", "types"=>["postal_code"]}], "formatted_address"=>"Google Bldg 42, 1600 Amphitheatre Pkwy, Mountain View, CA 94043, USA", "geometry"=>{"bounds"=>{"northeast"=>{"lat"=>37.42198310000001, "lng"=>-122.0853195}, "southwest"=>{"lat"=>37.4214139, "lng"=>-122.0860042}}, "location"=>{"lat"=>37.4216548, "lng"=>-122.0856374}, "location_type"=>"ROOFTOP", "viewport"=>{"northeast"=>{"lat"=>37.4230474802915, "lng"=>-122.0843128697085}, "southwest"=>{"lat"=>37.4203495197085, "lng"=>-122.0870108302915}}}, "place_id"=>"ChIJPzxqWQK6j4AR3OFRJ6LMaKo", "types"=>["premise"]}], "status"=>"OK"}
