--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,7 +32,7 @@
         <%= f.file_field :image %>
       </div>
 
-      <div class="label">
+      <div class="label" id="user-bio">
         <label><h3>Bio</h3></label>
       </div>
       <div>
