code gathered with key, its not working

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,5 +32,8 @@
         <%= f.submit 'Register' %>
       </div>
     <% end %>
+    <div class="facebook">
+      <%= render "shared/facebook" %>
+    </div>
   </aside>
 </section>
