updates user bio to have spacing

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
     <aside class="left-content">
       <h2><%= @user.username %></h2>
       <p>
-        <%= @user.bio %>
+        <%= raw @bio %>
       </p>
     </aside>
     <aside class="right-content">
