--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -2,6 +2,9 @@
   <h1 class="location-show-h1"> <%= @post.title %> </h1>
   <h3 class="location-show-h3"> <%= @address.gsub!('+', ' ') %> </h3>
   <ul class="maps">
+    <li>
+      <a href="https://www.google.com/maps/search/?api=1&query=<%= @address %>">LINK</a>
+    </li>
     <li id="map-far" class="mapped-locations-google-map-li">
       <img class="mapped-locations-google-map-img"  src="https://maps.googleapis.com/maps/api/staticmap?center=<%= @lat %>, <%= @lng %>&zoom=12&size=400x400&markers=color:green%7Clabel:%7C<%= @lat %>, <%= @lng %>&key=<%= ENV['GOOGLE_MAPS_KEY'] %>" alt="Google Image">
     </li>
