--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -35,8 +35,12 @@
   }
 
   .top .left-content img {
-    height: 250px;
-    width: 250px;
+    width: 75%;
+    height: auto;
+    margin-bottom: 30px;
+    border: 3px #fff solid;
+    padding: 0.75em;
+    border-radius: 5px;
   }
 
   .bottom .contribute span {
