--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -3,7 +3,7 @@
 
         <div class="seasons-show-header">
           <h1><%= @season.name %></h1>
-          <p>Sautee' Seattle is dedicated to bringing you up to date information on seasonal vegetable, fruit and more! We think that eating healthy and that information on seasonal produce should be easily available to everyone, all the time!</p>
+          <p>Saute' Seattle is dedicated to bringing you up to date information on seasonal vegetable, fruit and more! We think that eating healthy and that information on seasonal produce should be easily available to everyone, all the time!</p>
           <h2>Whats on the Menu?</h2>
         </div>
 
