--- a/app/views/shared/_login_bar.html.erb
+++ b/app/views/shared/_login_bar.html.erb
@@ -5,7 +5,7 @@
         <% if request.path == "/" %>
           Select a Season
         <% else %>
-          Sautee' Seattle
+          Saute' Seattle
         <% end %>
         </a></li>
     </ul>
