--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -4,7 +4,7 @@
   <h4 class="location-show-h4">Get directions to seasonal freshness!</h4>
   <ul class="maps">
     <li id="map" class="mapped-locations-google-map-li">
-      <a href="https://www.google.com/maps/search/?api=1&query=<%= @address %>"><img class="mapped-locations-google-map-img"  src="https://maps.googleapis.com/maps/api/staticmap?center=<%= @lat %>, <%= @lng %>&zoom=13&size=1000x1000&markers=color:green%7Clabel:%7C<%= @lat %>, <%= @lng %>&key=<%= ENV['GOOGLE_MAPS_KEY'] %>" alt="Google Image"></a>
+      <a target=”_blank” href="https://www.google.com/maps/search/?api=1&query=<%= @address %>"><img class="mapped-locations-google-map-img"  src="https://maps.googleapis.com/maps/api/staticmap?center=<%= @lat %>, <%= @lng %>&zoom=13&size=1000x1000&markers=color:green%7Clabel:%7C<%= @lat %>, <%= @lng %>&key=<%= ENV['GOOGLE_MAPS_KEY'] %>" alt="Google Image"></a>
     </li>
   </ul>
 </section>
