Login with facebook hits Users create route

--- a/app/views/shared/_facebook.html.erb
+++ b/app/views/shared/_facebook.html.erb
@@ -1,12 +1,2 @@
-<div class="fb-login-button" data-width="300px" data-max-rows="3" data-size="large" data-button-type="login_with" data-show-faces="true" data-auto-logout-link="false" data-use-continue-as="true"></div>
-
-<!--
-  Below we include the Login Button social plugin. This button uses
-  the JavaScript SDK to present a graphical Login button that triggers
-  the FB.login() function when clicked.
--->
-
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-</fb:login-button>
-
-<div id="status"></div>
+<div class="fb-login-button" data-width="400" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="true" data-auto-logout-link="true" data-use-continue-as="true" data-scope="public_profile" onlogin="handlelogin()"></div>
+<!-- v9G-HTk-tBn-6CW -->
