final changes on toggle nav

--- a/app/views/shared/_toggle_nav.html.erb
+++ b/app/views/shared/_toggle_nav.html.erb
@@ -7,7 +7,8 @@
       <li><a href="/seasons/Fall">Fall</a></li>
       <li><a href="/seasons/Winter">Winter</a></li>
       <% unless session[:user_id] %>
-        <li class="spot1-login"><%= link_to "login", login_path %> | </li> <li class="spot2"><%= link_to "register", new_user_path %></li>
+        <li><%= link_to "login", login_path %></li>
+        <li><%= link_to "register", new_user_path %></li>
       <% else %>
         <% if current_page?(user_path(User.find(session[:user_id]))) %>
           <li class="spot1">Hello <%= User.find(session[:user_id]).username %></li>
