--- a/app/assets/stylesheets/ingredients_show.scss
+++ b/app/assets/stylesheets/ingredients_show.scss
@@ -28,6 +28,12 @@
     font-size: 1.5em;
   }
 
+  .btn-show {
+    color: forestgreen!important;
+    padding-left: .5em;
+    font-family: 'arapeyitalic';
+  }
+
   a {
     color: white;
     text-decoration: none;
