--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -9,7 +9,8 @@
 
       <ul>
         <% @locations.each do |location| %>
-          <li><%= link_to location.title, "http://#{location.url}", target: '_blank' %></li>
+          <li><%= link_to location.title, "http://#{location.url}", target: '_blank' %>
+          <%= link_to 'map', location_path(location), :class => "btn-show" %></li>
         <% end %>
       </ul>
     <% if @ingredient.locations.length > 5 %>
