--- a/app/views/shared/_home-page.html.erb
+++ b/app/views/shared/_home-page.html.erb
@@ -4,8 +4,9 @@
   </article><!-- end home page -->
   <section id="manifesto">
       <aside class="manifesto-header">
-        <h2>“A thriving household depends on the use of seasonal produce and the application of common sense.”</h2>
-        <h4>- Olivier de Serres (1539-1619)</h4>
+        <%= image_tag "border-schmear.svg" %>
+        <h2>Our Manifesto</h2>
+        <h4>“A thriving household depends on the use of seasonal produce and the application of common sense.”<em>- Olivier de Serres (1539-1619)</em></h4>
       </aside>
       <aside class="left-content salad">
         <%= image_tag "veggies.jpg", class: "manifesto-img" %>
