--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,15 +1,21 @@
 <section>
+  <div class="location-all">
+    <h1 class="location-index-h1">More places to go...</h1>
 
-  <h1 class="location-index-h1">More places to go...</h1>
-  <% @ingredient.locations.each do |location| %>
-    <div class="locations-index-all-locations">
-        <h3 class="location-index-h3"><%= location.title %></h3>
-        <p class="locations-index-address"><%= location.body %></p>
-        <ul class="locations-index">
-          <li class="locations-index-posted">Posted by: <%= link_to location.user.username, user_path(location.user) %></li>
-          <li class="locations-index-map"><%= link_to 'Show me a map', location_path(location), :class => "btn-show" %></li>
-        </ul>
-    </div>
-  <% end %>
+    <% @ingredient.locations.each do |location| %>
+      <aside class="left-content title-posted">
+        <h3><%= location.title %></h3>
+
+        <p>Posted by:  <%= link_to location.user.username, user_path(location.user), class: 'posted-by' %></p>
+
+      </aside>
+
+      <aside class="right-content address-map">
+        <h4><%= location.body %></h4>
+
+        <p><%= link_to 'Show me a map', location_path(location), :class => "btn-show" %></p>
+      </aside>
+    <% end %>
+  </div>
 
 </section>
