--- a/app/assets/stylesheets/recipe_show.scss
+++ b/app/assets/stylesheets/recipe_show.scss
@@ -1,7 +1,7 @@
 #recipe-show {
   .left-content {
     h1 {
-      margin-top: 0;
+      margin-top: 0.7em;
       font-size: 2em;
       margin-bottom: 10px;
     }
@@ -18,6 +18,14 @@
   }
 
   .right-content {
+    h2 {
+      text-align: center;
+    }
+
+    aside {
+      text-align: center;
+    }
+
     p {
       width: 100%;
       text-align: center;
